--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href='javascript:Localize.setLanguage("xx")'>LANGUAGE_NAME</a>
+<a href='javascript:Localize.setLanguage("ja")'>LANGUAGE_NAME</a>
