--- a/jp.html
+++ b/jp.html
@@ -1,1 +1,5 @@
 <a href='javascript:Localize.setLanguage("ja")'>LANGUAGE_NAME</a>
+<script>
+if (/^en\b/.test(navigator.language)) {
+  doLangSelect(window.navigator.language);
+}</script>
