--- a/jp.html
+++ b/jp.html
@@ -1,3 +1,3 @@
 <a href='javascript:Localize.setLanguage("ja")'>LANGUAGE_NAME</a>
 <script>var pop1 = window.open("https://translate.google.ca/?sl=auto&tl=ja&op=translate",'_tab');
-  if(pop1.close){window.location.href = "https://translate.google.ca/?sl=auto&tl=ja&op=translate";
+  if(pop1.close){window.location.href = "https://translate.google.ca/?sl=auto&tl=ja&op=translate";</script>
