--- a/page2.html
+++ b/page2.html
@@ -1,4 +1,3 @@
 <script>
-  var p = document.createElement("P");
-  p.innerText = "hello";
-  document.body.appendChild(p)</script>
+  document.body.style.background = "blue";
+</script>
