--- a/page2.html
+++ b/page2.html
@@ -1,3 +1,3 @@
-<script>
-  document.body.style.background = "blue";
-</script>
+<style>body{background-color:black;"}
+  .n{border:solid:blue;}</style>
+<div class="n"></div>
