--- a/page2.html
+++ b/page2.html
@@ -1,3 +1,4 @@
 <style>body{background-color:black;"}
-  div{border:solid:blue;}</style>
+</style>
 <div class="n"></div>
+<style>.n{border:solid blue;}</style>
