--- a/page2.html
+++ b/page2.html
@@ -1,4 +1,4 @@
 <style>body{background-color:black;"}
 </style>
 <div class="n"></div>
-<style>.n{border:solid blue;}</style>
+<style>.n{border:solid blue;height:500px;}</style>
