--- a/page2.html
+++ b/page2.html
@@ -1,5 +1,6 @@
 <style>body{background-color:black;"}
 </style>
-<div class="n"></div>
+<div class="n"><p class="p"></p></div>
 <style>.n{border:solid blue;
-height:100px;}</style>
+height:100px;}
+  .p{color:white;}</style>
