--- a/page2.html
+++ b/page2.html
@@ -4,7 +4,7 @@
 <style>.n{border:solid blue;
   height:100px;</style>
 <script>function myfunction(){ 
-    var s = document.getElementById("t").value;
+    var s = document.getElementById("t").innerText;
     alert(s)
 }
 
