--- a/page2.html
+++ b/page2.html
@@ -1,4 +1,4 @@
-<style>body{background-color:black;"}
+<style>body{background-color:lightblue;"}
 </style>
 <div class="n"><p class="p">hello</p><input id="t"type="search" action="myfunction()"></input></div>
 <style>.n{border:solid blue;
@@ -8,5 +8,5 @@
     alert(s)
 }
 
-
 </script>
+<marquee direction="left">hello world!</marquee>
