--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,7 @@
 <style>body{background-color:lightblue;"}
 </style>
 <div class="n"><p class="p">hello</p><input id="t"type="search" action="myfunction()"></input></div>
-<style>.n{border:solid blue;
+<style>.n{border:solid green;}
   height:100px;</style>
 <script>function myfunction(){ 
     var s = document.getElementById("t").innerText;
