--- a/page2.html
+++ b/page2.html
@@ -3,10 +3,5 @@
 <div class="n"><p class="p">hello</p><input id="t"type="search" action="myfunction()"></input></div>
 <style>.n{border:solid green;}
   height:100px;</style>
-<script>function myfunction(){ 
-    var s = document.getElementById("t").innerText;
-    alert(s)
-}
-
-</script>
 <marquee direction="left">hello world!</marquee>
+<noscript>pleae enable javaScript</noscript>
