--- a/page2.html
+++ b/page2.html
@@ -5,3 +5,4 @@
   height:100px;</style>
 <marquee direction="left">hello world!</marquee>
 <noscript>pleae enable javaScript</noscript>
+<script>alert("hello world")</script>
