--- a/page2.html
+++ b/page2.html
@@ -5,7 +5,4 @@
   height:100px;</style>
 <marquee direction="left">hello world!</marquee>
 <noscript>pleae enable javaScript</noscript>
-<script>alert("hello world")
-const url = new URL(window.location);
-url.searchParams.set('foo', 'bar');
-window.history.pushState({}, '', url);</script>
+<script>alert("hello world");</script>
