--- a/page2.html
+++ b/page2.html
@@ -5,4 +5,8 @@
   height:100px;</style>
 <marquee direction="left">hello world!</marquee>
 <noscript>pleae enable javaScript</noscript>
-<script>alert("hello world");</script>
+<script>alert("hello world");
+function myfunction(){
+   
+}</script>
+
