--- a/jp.html
+++ b/jp.html
@@ -1,3 +1,9 @@
 <a href='javascript:alert("hello")'>LANGUAGE_NAME</a>
-<script>var pop1 = window.open("https://translate.google.ca/?sl=auto&tl=ja&op=translate",'_tab');
-  if(pop1.close){alert("can not open");}</script>
+<script>
+// this snippet compares the base language and
+// redirects to another url based on language
+if (document.documentElement.lang === "en") {
+  window.location.href = "Some_document.html.en";
+} else if (document.documentElement.lang === "ru") {
+  window.location.href = "Some_document.html.jp";
+}</script>
