--- a/jp.html
+++ b/jp.html
@@ -4,6 +4,6 @@
 // redirects to another url based on language
 if (document.documentElement.lang === "en") {
   window.location.href = "Some_document.html.en";
-} else if (document.documentElement.lang === "ru") {
+} else if (document.documentElement.lang === "jp") {
   window.location.href = "Some_document.html.jp";
 }</script>
