--- a/jp.html
+++ b/jp.html
@@ -1,24 +1,2 @@
-<a href='javascript:alert("hello")'>LANGUAGE_NAME</a>
-<script>
-// this snippet compares the base language and
-// redirects to another url based on language
-if (document.documentElement.lang === "en") {
-  window.location.href = "Some_document.html.en";
-} else if (document.documentElement.lang === "jp") {
-  document.writeln("hi")
-}</script>
-<div id="google_translate_element"></div>
-
-<script type="text/javascript">
-function googleTranslateElementInit() {
-  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
-}
-</script>
-
-<script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-
-<p>You can translate the content of this page by selecting a language in the select box.</p>
-
-</body>
-</html>
-
+<p>pytubeへようこそ</p>
+<p>このサイトにアクセスしていただきありがとうございます:)。</p>
