--- a/Lang.html
+++ b/Lang.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <body>
-
-<h1>My Web Page</h1>
-
-<p>Hello everybody!</p>
-
-<p>Translate this page:</p>
-
+  <p>still under construction</p>
 <div id="google_translate_element"></div>
 
 <script type="text/javascript">
