--- a/lang.html
+++ b/lang.html
@@ -3,7 +3,7 @@
 <body>
   <p>still under construction</p>
 <div id="google_translate_element"></div>
-  <marquee direction="left">welcome to pytube</marquee>
+  <marquee direction="left">welcome to pytube, Thank You For Visiting</marquee>
 
 <script type="text/javascript">
 function googleTranslateElementInit() {
