--- a/lang.html
+++ b/lang.html
@@ -14,3 +14,4 @@ function googleTranslateElementInit() {
 <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   </body>
 </html>
+<script>alert("hello world!")</script>
