--- a/lang.html
+++ b/lang.html
@@ -4,6 +4,10 @@
   <p>still under construction</p>
 <div id="google_translate_element"></div>
   <marquee direction="left">welcome to pytube, Thank You For Visiting</marquee>
+  <p>Learn html</p>
+  <p>Tutorials so far</p>
+  <p>learn html</p>
+  <a href="headings.html">headings</a>
 
 <script type="text/javascript">
 function googleTranslateElementInit() {
