--- a/headings.html
+++ b/headings.html
@@ -6,4 +6,4 @@
   }
   </script>
 <p>tutorial 1</p>
-&lt;h1&gt;this can be whatever you want&gt;/h1&l;
+&lt;h1&gt;this can be whatever you want&gt;/h1&lt;
