--- a/index.html
+++ b/index.html
@@ -12,3 +12,4 @@ function googleTranslateElementInit() {
   new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
 }
 </script>
+<a href="learnhtml.html">learn html</a>
