--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@ function googleTranslateElementInit() {
   new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
 }
 </script>
-<a href="learnhtml.html">learn html</a>
-<a href="learncss.html">learn css</a>
+<select><option><a href="learnhtml.html">learn html</a></option>
+  <option><a href="learncss.html">learn css</a></option></select>
