--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@ function googleTranslateElementInit() {
 function googleTranslateElementInit() {
   new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
 }
+var lang =   documentgetElementById("l").innerTextNode;
+  if(lang == "learn css"){
+    window.location.href="learncss.html";
+  }
 </script>
-<option><select><a href="learnhtml.html">learn html</a></select>
+<option id="l"><select><a href="learnhtml.html">learn html</a></select>
   <select><a href="learncss.html">learn css</a></select></option>
