--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ function googleTranslateElementInit() {
 function googleTranslateElementInit() {
   new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
 }
-var lang =   documentgetElementById("l").innerTextNode;
+var lang =   documentgetElementById("l").innerText;
   if(lang == "learn css"){
     window.location.href="learncss.html";
   }
