--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@ var lang = document.getElementById("l");
     window.location.href="learncss.html";
   }
 </script>
-<option id="l"><select><a href="learnhtml.html">learn html</a></select>
-  <select><a href="learncss.html">learn css</a></select></option>
+<select id="l"><select><a href="learnhtml.html">learn html</a></option>
+  <option><a href="learncss.html">learn css</a></option></select>
