--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@ function googleTranslateElementInit() {
   new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
 }
 var lang = document.getElementById("l");
-  if(lang.innerText == "learn css"){
+  if(lang.selectedIndex = "learn css"){
     window.location.href="learncss.html";
   }
 </script>
-<select id="l"><select><a href="learnhtml.html">learn html</a></option>
-  <option><a href="learncss.html">learn css</a></option></select>
-<select></select>
+  
+<select><option>learn html</option>
+  <option>learn css</option>w</select>
