--- a/index.html
+++ b/index.html
@@ -18,4 +18,4 @@ var lang = document.getElementById("l");
 </script>
   
 <select><option>learn html</option>
-  <option>learn css</option>w</select>
+  <option>learn css</option></select>
