--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ function googleTranslateElementInit() {
   new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
 }
 var lang = document.getElementById("l");
-  if(lang.selectedIndex = "learn css"){
+  if(lang.selectedIndex = "1"){
     window.location.href="learncss.html";
   }
 </script>
