--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ function googleTranslateElementInit() {
 }
 var lang = document.getElementById("l");
   if(lang.selectedIndex = "1"){
-    window.location.href="learncss.html";
+    alert("loading")
   }
 </script>
   
