--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ var lang = document.getElementById("l");
 </script>
   
 <select><option>learn html</option>
-  <option>learn css</option></select>
+  <option>learn css</option></select><script>
 function myFunction() {
   var x = document.getElementById("mySelect").selectedIndex;
   var y = document.getElementById("mySelect").options;
