--- a/index.html
+++ b/index.html
@@ -11,13 +11,10 @@ function googleTranslateElementInit() {
 function googleTranslateElementInit() {
   new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
 }
-var lang = document.getElementById("l");
-  if(lang.selectedIndex = "1"){
-    alert("loading")
-  }
+
 </script>
   
-<select><option>learn html</option>
+<select id="myselect"><option>learn html</option>
   <option>learn css</option></select><script>
 function myFunction() {
   var x = document.getElementById("mySelect").selectedIndex;
