--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ function googleTranslateElementInit() {
 
 </script>
   
-<select id="myselect"><option>learn html</option>
+<select id="mySelect"><option>learn html</option>
   <option>learn css</option></select><script>
 function myFunction() {
   var x = document.getElementById("mySelect").selectedIndex;
