--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@ function googleTranslateElementInit() {
 <button onclick="lan()">go</button><script>
 function lan() {
   var x = document.getElementById("mySelect").selectedIndex;
-  var y = document.getElementById("mySelect").options;
-  alert("Index: " + y[x].index + " is " + y[x].text);
+ ;
+  alert("Index: " + y[x].index + " is " + [x].text);
+  if(x.text ="learn html"){window.location.href ="learnhtml.html";}
 }
 </script>
