--- a/index.html
+++ b/index.html
@@ -20,5 +20,5 @@ function googleTranslateElementInit() {
 function lan() {
   var x = document.getElementById("mySelect").selectedIndex;
   if(x.text ="learn html"){window.location.href ="learnhtml.html";}
-}
+}else{window.location.href ="learncss.html";}
 </script>
