--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@ function googleTranslateElementInit() {
 
 </script>
   
-<select id="mySelect"><option>learn html</option>
+<select id="mySelect"><option value="1">learn html</option>
   <option>learn css</option></select>
 <button onclick="lan()">go</button><script>
 function lan() {
-  var x = document.getElementById("mySelect").selectedIndex;
-  if(x.text ="learn html"){window.location.href ="learnhtml.html";}
+  var x = document.getElementById("mySelect").value;
+  if(x =1"){window.location.href ="learnhtml.html";}
 }else{window.location.href ="learncss.html";}
 </script>
