--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ function googleTranslateElementInit() {
 </script>
   
 <select id="mySelect"><option value="1">learn html</option>
-  <option>learn css</option></select>
+  <option value="2">learn css</option></select>
 <button onclick="lan()">go</button><script>
 function lan() {
   var x = document.getElementById("mySelect").value;
