--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@ function googleTranslateElementInit() {
 <button onclick="lan()">go</button><script>
 function lan() {
   var x = document.getElementById("mySelect").value;
-  if(x= 1){window.location.href ='learnhtml.html'}
+  if(x= 1){
+    window.location.href ='learnhtml.html';
+  }
   
 </script>
