--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ function googleTranslateElementInit() {
 <script>
 function lan(){
   var x = document.getElementById("mySelect").value;
-  document.getElementById("r").innerHTML = x;
+var res = document.getElementById("r").innerHTML = x;
+  if(res == 1){window.location.href="learnhtml.html";}
 }
 </script>
