--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@ function lan(){
   var x = document.getElementById("mySelect").value;
 var res = document.getElementById("r").innerHTML = x;
   if(res == 1){window.location.href="learnhtml.html";}
+  if(res == 2){window.location.href="learncss.html";}
 }
 </script>
