--- a/learnhtml.html
+++ b/learnhtml.html
@@ -5,8 +5,7 @@
 <div id="google_translate_element"></div>
   <marquee direction="left">welcome to pytube, Thank You For Visiting</marquee>
   <p>Learn html</p>
-  <p>Tutorials so far</p>
-  <p>learn html</p>
+  <select id="t"><option value="1">headings</option></value>
   <a href="headings.html">headings</a>
 
 <script type="text/javascript">
@@ -20,3 +19,5 @@ function googleTranslateElementInit() {
 </html>
 <script>alert("hello world!")</script>
 
+<script>var s = document.getElementById("t").value;
+  if(s = 1){window.location.href = "headings.html";}</script>
