--- a/learnhtml.html
+++ b/learnhtml.html
@@ -6,8 +6,7 @@
   <marquee direction="left">welcome to pytube, Thank You For Visiting</marquee>
   <p>Learn html</p>
   <select id="t"><option value="1">headings</option></value>
-  <a href="headings.html">headings</a>
-
+  <button onclick="t()">go</button>
 <script type="text/javascript">
 function googleTranslateElementInit() {
   new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
@@ -19,5 +18,5 @@ function googleTranslateElementInit() {
 </html>
 <script>alert("hello world!")</script>
 
-<script>var s = document.getElementById("t").value;
-  if(s = 1){window.location.href = "headings.html";}</script>
+<script>function t(){var s = document.getElementById("t").value;
+  if(s = 1){window.location.href = "headings.html";}}</script>
