--- a/learnhtml.html
+++ b/learnhtml.html
@@ -5,7 +5,8 @@
 <div id="google_translate_element"></div>
   <marquee direction="left">welcome to pytube, Thank You For Visiting</marquee>
   <p>Learn html</p>
-  <select id="t"><option value="1">headings</option></value>
+  <select id="t"><option value="0">select</option><option value="1">headings</option>
+                          
   <button onclick="t()">go</button>
 <script type="text/javascript">
 function googleTranslateElementInit() {
@@ -19,4 +20,5 @@ function googleTranslateElementInit() {
 <script>alert("hello world!")</script>
 
 <script>function t(){var s = document.getElementById("t").value;
-  if(s = 1){window.location.href = "headings.html";}}</script>
+  if(s = 1){window.location.href = "headings.html";}
+                  }</script>
