--- a/learnhtml.html
+++ b/learnhtml.html
@@ -20,5 +20,5 @@ function googleTranslateElementInit() {
 <script>alert("hello world!")</script>
 
 <script>function t(){var s = document.getElementById("t").value;
-  if(s = 1){window.location.href = "headings.html";}
+  if(s == 1){window.location.href = "headings.html";}
                   }</script>
