--- a/learnhtml.html
+++ b/learnhtml.html
@@ -5,7 +5,7 @@
 <div id="google_translate_element"></div>
   <marquee direction="left">welcome to pytube, Thank You For Visiting</marquee>
   <p>Learn html</p>
-  <select id="t"><option value="0">select</option><option value="1">headings</option></select>
+  <select id="t"><option value="0">select</option></select>
                           
   <button onclick="t()">go</button>
 <script type="text/javascript">
