--- a/learnhtml.html
+++ b/learnhtml.html
@@ -17,8 +17,7 @@ function googleTranslateElementInit() {
 <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   </body>
 </html>
-<script>alert("hello world!")</script>
-
-<script>function t(){var s = document.getElementById("t").value;
-  if(s = 1){window.location.href = "headings.html";}
+<script>function t(){
+    var s = document.getElementById("t").value;
+    if(s = 1){window.location.href = "headings.html";}
                   }</script>
