--- a/learnhtml.html
+++ b/learnhtml.html
@@ -20,4 +20,5 @@ function googleTranslateElementInit() {
 <script>function t(){
     var s = document.getElementById("t").value;
     if(s = 1){window.location.href = "headings.html";}
-     if(s = 0){alert("choose an option")}            }</script>
+     if(s = 0){alert("choose an option")}            
+  }</script>
