--- a/learnhtml.html
+++ b/learnhtml.html
@@ -5,7 +5,7 @@
 <div id="google_translate_element"></div>
   <marquee direction="left">welcome to pytube, Thank You For Visiting</marquee>
   <p>Learn html</p>
-  <select id="t"><option value="1">select option</option><option value="1">headings</option></select>
+  <select id="t"><option value="1">select option</option><option value="2">headings</option></select>
                        
   <button onclick="t()">go</button>
 <script type="text/javascript">
@@ -19,6 +19,8 @@ function googleTranslateElementInit() {
 </html>
 <script>function t(){
     var s = document.getElementById("t").value;
-    if(s = 1){window.location.href = "headings.html";}
-                
-  }</script>
+    if(s = 2){window.location.href = "headings.html";}
+    if(s = 0){
+      alert("select a diferent option") 
+             }
+             }</script>
