--- a/learnhtml.html
+++ b/learnhtml.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+s<!DOCTYPE html>
 <html lang="en-US">
 <body>
   <p>still under construction</p>
@@ -20,7 +20,7 @@ function googleTranslateElementInit() {
 <script>function t(){
     var s = document.getElementById("t").value;
     if(s = 2){window.location.href = "headings.html";}
-    if(s = 0){
+    if(s = 1){
       alert("select a diferent option") 
              }
              }</script>
