--- a/learnhtml.html
+++ b/learnhtml.html
@@ -19,8 +19,8 @@ function googleTranslateElementInit() {
 </html>
 <script>function t(){
     var s = document.getElementById("t").value;
-    if(s == 2){window.location.href = "headings.html";}
-    if(s == 1){
+    if(s = 2){window.location.href = "headings.html";}
+    if(s = 1){
       alert("select a diferent option") 
              }
              }</script>
