--- a/learnhtml.html
+++ b/learnhtml.html
@@ -5,7 +5,7 @@ s<!DOCTYPE html>
 <div id="google_translate_element"></div>
   <marquee direction="left">welcome to pytube, Thank You For Visiting</marquee>
   <p>Learn html</p>
-  <select id="t"><option value="1">select option</option><option value="2">headings</option></select>
+  <select id="t"><option value="1">select option</option><option value="2">headings</option><option value="3">paragraphs</option></select>
                        
   <button onclick="t()">go</button>
 <script type="text/javascript">
@@ -23,4 +23,5 @@ function googleTranslateElementInit() {
     if(s = 1){
       alert("select a diferent option") 
              }
+    if(s == 3){alert("page not created yet")}
              }</script>
