--- a/learnhtml.html
+++ b/learnhtml.html
@@ -23,5 +23,5 @@ function googleTranslateElementInit() {
     if(s = 1){
       alert("select a diferent option") 
              }
-    if(s = 3){alert("page not created yet")}
-             }</script>
+    if(s = 3){window.location.href = "paragraphs.html":}
+             }</script> 
