--- a/learnhtml.html
+++ b/learnhtml.html
@@ -19,5 +19,6 @@ function googleTranslateElementInit() {
 </html>
 <script>function t(){
     var s = document.getElementById("t").value;
-    if(s = 2){window.location.href = "headings.html";}
-             }</script> 
+    if(s = 2){window.location.href = "headings.html";}}
+             
+</script> 
