--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ function googleTranslateElementInit() {
 <script>
 function lan(){
   var x = document.getElementById("mySelect").value;
-var res = document.getElementById("r").innerHTML = x;
-  if(res == 1){window.location.href="learnhtml.html";}
-  if(res == 2){window.location.href="learncss.html";}
+
+  if(x == 1){window.location.href="learnhtml.html";}
+  if(x == 2){window.location.href="learncss.html";}
 }
 </script>
