--- a/index.html
+++ b/index.html
@@ -26,4 +26,10 @@ function lan(){
   if(x == 1){window.location.href="learnhtml.html";}
   if(x == 2){window.location.href="learncss.html";}
 }
-</script>
+</script><p>horror books</p>
+<select id="h"><option value="1">room 120</option><option value="2">non horror</option></select>
+<button onclick="s()">search</button>
+<script>function s(){
+    var hor = document.getElementById("h").value;
+    if(hor = 1){window.location.href="https://docs.google.com/file/d/1mE2BwlHNhaVRKXshMfG9XXG-d-heT1wc/edit?usp=docslist_api&filetype=msword";}
+  }</script>
