--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<input type="text" id="t"></input>
+<script>var t = document.getElementById("t").value;
+  var google;
+  if(t = google){window.location.href="https://www.google.com";}
+                                      
+
 <div id="google_translate_element"></div>
 <script type="text/javascript">
 function googleTranslateElementInit() {
