--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <input type="text" id="t"></input>
 <script>var t = document.getElementById("t").value;
-  var google;
+  var google = google;
   if(t = google){window.location.href="https://www.google.com";}
                                       
 
