--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<input type="text" id="t"></input>
-<script>var t = document.getElementById("t").value;
+<input type="text" id="t" onsearch="s()"></input>
+<script>functipn s(){var t = document.getElementById("t").value;
   var google = google;
-  if(t = google){window.location.href="https://www.google.com";}
+  if(t = google){window.location.href="https://www.google.com";}}</script>
                                       
 
 <div id="google_translate_element"></div>
