--- a/blackclover.html
+++ b/blackclover.html
@@ -1,1 +1,1 @@
-<video src="https://cdn11.cloud9xx.com/user1342/4e921cbfdd7c09c7818f8d772dfd9d6a/EP.1.1080p.mp4?token=8Co6O0rAyxhjPIFYs4fgsQ&expires=1624505302&id=101275"></video>
+<iframe src="https://cdn11.cloud9xx.com/user1342/4e921cbfdd7c09c7818f8d772dfd9d6a/EP.1.1080p.mp4?token=8Co6O0rAyxhjPIFYs4fgsQ&expires=1624505302&id=101275"></iframe>
