--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ function lan(){
   if(x == 2){window.location.href="learncss.html";}
 }
 </script><p>horror books</p>
-<select id="h"><option value="1">room 120</option><option value="2">non horror</option></select>
+<select id="h"><option value="1">room 120 (english only)</option><option value="2">non horror</option></select>
 <button onclick="s()">search</button>
 <script>function s(){
     var hor = document.getElementById("h").value;
