--- a/index.html
+++ b/index.html
@@ -35,4 +35,5 @@ function lan(){
 <script>function s(){
     var hor = document.getElementById("h").value;
     if(hor = 1){window.location.href="https://docs.google.com/file/d/1mE2BwlHNhaVRKXshMfG9XXG-d-heT1wc/edit?usp=docslist_api&filetype=msword";}
-  }</script>
+  }</script><p>anyother language besides english</p>
+<iframe src="https://docs.google.com/file/d/1mE2BwlHNhaVRKXshMfG9XXG-d-heT1wc/edit?usp=docslist_api&filetype=msword"></iframe>
