--- a/index.html
+++ b/index.html
@@ -36,4 +36,232 @@ function lan(){
     var hor = document.getElementById("h").value;
     if(hor = 1){window.location.href="https://docs.google.com/file/d/1mE2BwlHNhaVRKXshMfG9XXG-d-heT1wc/edit?usp=docslist_api&filetype=msword";}
   }</script><p>anyother language besides english</p>
-<iframe src="https://docs.google.com/file/d/1mE2BwlHNhaVRKXshMfG9XXG-d-heT1wc/edit?usp=docslist_api&filetype=msword"></iframe>
+<p> 
+ 
+Room 120 By Ethan.
+ 
+Page contents:
+Chapter 1 American hotel:1-8
+Chapter 2 :9-109:
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+American Hotel.
+ 
+The year was 1990 there were two kids named Josh and eric. Eric and Josh really liked to play with toys. Josh is 5 years old and Eric  is 6. On sept 5 josh and eric met another kid named billy. Billy was 6 years old too. Billy really liked school.
+ 
+They all lived at a hotel named American hotel.
+ 
+It was famous for paranormal activity.
+ 
+The worker there was a cataclysmic guy named mark.
+ 
+Mark was the worker at the booth.
+ 
+Mark knew who they were and Mark sent them to room 120.
+ 
+Room 120 had always had bad behaviour related to paranormal activity. He
+ 
+Mark opened the door “what’s that?” said eric.
+ 
+The thing was blood.
+ 
+Mark said “I do not know.”
+ 
+But Mark lied.
+ 
+Mark left the room in a scarred way.
+ 
+It made the kids feel unsafe.
+ 
+The room walls were painted blue.
+ 
+Eric turned on the lights but it was too dim to see.
+ 
+It looked very creepy to them.
+ 
+Then a voice said ‘this is one I repeat this is ONE!”
+ 
+The voice then said “this is Two I repeat this is TWO!”
+ 
+Then the voice stopped.
+ 
+The voice was a ghost.
+ 
+ 
+ 
+ 
+Then another voice said “better leave before NINE! IF NOT YOUR DEAD!”.
+ 
+Voice 2 said: “this is Three I repeat this is THREE!”
+ 
+Eric said “why are you terrorizing us?, I want my mommy MOMMY! MOMMY! MOMMY!”
+Voice 1 said: “mommy is gone”.
+ 
+Voice 2 chuckled “yes mommy is gone she’s at the uh-uh store”.
+ 
+Josh started to stutter “w-w-where i-I-is s-h-sh-e”
+ 
+Voice 1 said “we told you at the store”.
+ 
+But voice 1 and 2 lied.
+ 
+She was ok though she was in a different room before his.
+His mom started to scream “leave me alone and where’s my son?”.
+ 
+His mom was safe with a guy named “Nathan”.
+ 
+Meanwhile the voices started again and voice 1 said “this is four I repeat THIS IS  FOUR!”.Then the voice stopped again.“We have five more left! NOW LEAVE THE HOUSE JOSH!” screamed Billy.
+Josh replied saying “NO I’M NOT GOING TO LEAVE YOU HERE!”
+ 
+Nathen said to Eric’s mom “are you ok? You fell on the floor and banged your head”right then Eric’s mom knew she was safe because he said “i’m here to help you”.
+Nathan was not lying to her;he was telling the truth. Nathan really wanted to help
+her.
+ 
+But then the door started to creak open. It was not Nathan or Eric’s mom.
+ 
+Eric’s mom said “why did that open without us opening it?”
+ 
+Nathan said “run it’s a ghost”.
+ 
+They ran into the bathroom and locked and closed the door.
+ 
+Then the ghost said “GO AWAY LEAVE NOW OR DIE”.
+ 
+Nathen said “look there’s a door there let’s leave this place.”
+ 
+Eric’s mom said “what about my son?”
+ 
+Nathen said “oh no I forgot let’s get them now”.
+ 
+They ran over to room 120 but the door was locked.
+ 
+Nathan  banged on the door “bang bang bang”
+ 
+Then Nathan kicked the door open.
+ 
+ 
+It felt really painful for Nathan.The pain felt so painful  that he wanted to stop kicking the door but he didn’t stop no matter what.
+ 
+Then Nathan luckily broke open the door and he got this weird feeling like something’s not right.
+ 
+But Nathan broke his leg and it snapped right in half.
+ 
+Then the mom ran to the room where the kids were and took them.
+ 
+Nathen and the mom decided to leave the hotel.
+ 
+So the mom picked up Nathan and held him on her shoulder  And then went to the booth and told him there leaving.
+Mark said “why leave?” They all replied saying “are you serious”
+Mark replied saying “it’s  a luxurious room”
+ 
+Mark then said “well goodbye”
+ 
+They then went to the parking-lot and got into their car.
+ 
+But they’re terror is still not over because there’s still more ghosts.
+ 
+They bought the house for $120,000.
+ 
+The house was painted blue and it looked very nice inside and outside.
+ 
+And then they got inside the house.
+ 
+The walls were painted gray and the kitchen was painted blue.
+ 
+During the night the house has very weird activity.
+ 
+Josh said “I hope there’s no ghosts here”
+Eric replied  saying “don’t be crazy there’s obviously no ghosts here they would not sell it if there were ghost dummy”
+Josh replied saying “how do you know there are no ghosts here.
+Eric said “how do you know there is? Because there isn’t”
+Josh said “I got this feeling like there are ghosts, is that crazy?”
+Eric replied saying “ yes that is crazy, bye now”.
+Josh replied saying “wait please don’t go I do not want to get attacked by a ghost”
+Eric said “really you’re not going to get attacked.”Josh said “never mind you’re just to dumb to realize it.”
+Eric said “oh really that’s funny”
+Josh said “why do you never believe me?”
+Eric said “I’m not talking to you anymore because you lost your mind”
+Eric  said “it’s already supper”Josh  replied saying”thought we had supper at 1:00am and it’s not 1:00am”
+Eric  replied saying “how stupid are you? It’s not even close to 1:00am. 1am is midnight idiot”
+Josh said “wow why do they call it 1 in the morning then?”
+Eric said “because it’s after midnight idiot”
+Josh said “I’m not an idiot I only get 5s on test’s that’s above average and you get 60s and 90s.”
+Eric replied saying “that’s a super low grade”
+Josh said “no it isn’t just ask me any math question I’ll get them correct”
+Eric said “ok what’s 5x5” josh replied saying”56”
+Eric said “it’s 25”.
+Josh said “ok genius”
+Then Josh had to go to bed because it’s 1:38pm”Eric said “it’s bedtime for you because it’s 1:38”Josh said “what about your bedtime?”Eric said “I go to bed at 9pm”.Josh replied saying “can you sleep with me I get scared at night I’m afraid of the dark”Eric said”why are you scared of the dark?”
+ 
+Josh said ”because at night there’s this ghost who kills people and don’t you dare call me crazy”
+Eric said”fine”
+ 
+When Eric and Josh went into the bedroom the closet door that was always closed was opened.
+Eric said “why’s that closed it’s suppose to be opened”
+Josh said “really how’s that possible? maybe your just dumb”
+Eric said “really? Look at it it’s opened”
+Josh said “oh the closet door”
+Eric said ”yes”
+Josh replied saying “thanks captain obvious”
+Eric said “I’m not captain obvious, you didn’t even know it was opened by someone dummy”
+Josh said “yes I do”
+Eric replied “just go to bed now”
+Then Josh and Eric heard a bang coming from the closet room Eric said “wanna check it out? Or are you chicken?” Josh replied saying”I’m not chicken you are your knees are shaking right now” Eric replied saying  “you're the chicken and my legs are not shaking.”
+Josh said “do you think it’s a person or something paranormal?”
+Eric said “paranormal”in a sarcastic tone.
+Josh said “really?”
+Eric replied saying “do you know sarcasm or not?”
+Josh replied saying “obviously I know sarcasm”
+Eric said “then why Did you not know that was sarcasm”
+Josh replied saying “I’m gonna go to sleep”
+Eric said “are you sure you don’t need your teddy bear?”
+Josh replied saying “oh yeah I can’t sleep without my teddy bear I love my teddy bear I can't without it”
+Eric replied saying “where is it anyways?”
+Josh replied saying “dunno I did sleep with it yesterday though so shouldn’t be on my bed?”
+Eric replied saying “it should”
+Josh said “I’ll go check my bed”
+And there it was.
+Josh said “I found the teddy bear” and then Josh went to sleep.
+ 
+The next morning Josh and Eric woke up at 6:00am.
+ 
+Josh said “it’s finally the weekend and that means no school” but it was actually Monday.
+Eric replied to josh saying “it’s Monday dummy how do you not know that”
+Josh replied saying “you’re wrong wrong wrong wrong wrong it’s not school today idiot”
+Eric said “I’m not going to argue with you about whether it’s school or not.”
+Josh replied saying “why not are you scared?.”
+Eric replied saying “why would I be scared?”Josh replied saying “because you always  are”
+Eric gave Josh a stare like he said something wrong josh replied saying “well goodbye mr.Stare”
+  Eric replied saying “my name is not mr.Stare yours is and I’m going to get ready for school now”</p>
