--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-
-                                      
+<link rel="stylesheet" href="home.css"/>                                    
 
 <div id="google_translate_element"></div>
 <script type="text/javascript">
