--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ function lan(){
     var hor = document.getElementById("h").value;
     if(hor = 1){window.location.href="https://docs.google.com/file/d/1mE2BwlHNhaVRKXshMfG9XXG-d-heT1wc/edit?usp=docslist_api&filetype=msword";}
   }</script><p>anyother language besides english</p>
-<p> 
+<p class="bl">
  
 Room 120 By Ethan.
  
