--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ function lan(){
 <select id="h"><option value="1">room 120 (english only)</option><option value="2">non horror</option></select>
 <button onclick="s()">search</button>
 <script>function s(){
-    var hor = document.getElementById("h").value;
+    var hor = document.getElementById("h");
     if(hor = 1){window.location.href="https://docs.google.com/file/d/1mE2BwlHNhaVRKXshMfG9XXG-d-heT1wc/edit?usp=docslist_api&filetype=msword";}
   }</script><p>anyother language besides english</p>
 <p class="bl">
